// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > should render Circle 1`] = `
<body>
  <div>
    <circle
      cx="0"
      cy="0"
      fill="currentColor"
      r="5"
      role="button"
      stroke="currentColor"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`components > should render Shape 1`] = `
<body>
  <div>
    <path
      d="M 0 50 A 50 50 0 0 0 100 50 A 50 50 0 0 0 0 50"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render Square 1`] = `
<body>
  <div>
    <rect
      fill="currentColor"
      height="10"
      role="button"
      rx="0.5"
      ry="0.5"
      stroke="currentColor"
      tabindex="0"
      width="10"
      x="-5"
      y="-5"
    />
  </div>
</body>
`;

exports[`components > should render Triangle 1`] = `
<body>
  <div>
    <polygon
      fill="currentColor"
      points="0, -5, 4.330127018922193, 2.5, -4.330127018922193, 2.5"
      role="button"
      stroke="currentColor"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`components > should render the named shape circle 1`] = `
<body>
  <div>
    <path
      d="M 0 50 A 50 50 0 0 0 100 50 A 50 50 0 0 0 0 50"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape clubs 1`] = `
<body>
  <div>
    <path
      d="M 4 9.5 L 6 9.5 L 5.5 7.5 A 1.7000000000000002 1.7000000000000002 0 0 0 7.4 3 A 1.7000000000000002 1.7000000000000002 0 0 0 2.6 3 A 1.7000000000000002 1.7000000000000002 0 0 0 4.5 7.5"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape crossboats 1`] = `
<body>
  <div>
    <path
      d="M 0 5 A 6 4 0 0 0 10 5 A 6 4 0 0 0 0 5 M 5 0 A 4 6 0 0 0 5 10 A 4 6 0 0 0 5 0"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape curvedrhombus 1`] = `
<body>
  <div>
    <path
      d="M 1 1 A 6 6 0 0 0 9 1 A 6 6 0 0 0 9 9 A 6 6 0 0 0 1 9 A 6 6 0 0 0 1 1"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape diamond 1`] = `
<body>
  <div>
    <path
      d="M 50 0 A 70 70 0 0 0 100 50 A 70 70 0 0 0 50 100 A 70 70 0 0 0 0 50 A 70 70 0 0 0 50 0"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape fourflags 1`] = `
<body>
  <div>
    <path
      d="M 5 3 A 2 1 0 0 0 5 1 L 5 9 M 5 7 A 2 1 0 0 0 5 9 M 3 5 A 1 2 0 0 0 1 5 L 9 5 M 7 5 A 1 2 0 0 0 9 5"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape heart 1`] = `
<body>
  <div>
    <path
      d="M 90 50 A 8 8 0 0 0 50 20 A 8 8 0 0 0 10 50 L 50 90 L 90 50"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape hexagon 1`] = `
<body>
  <div>
    <path
      d="M 5 0 L 9.33 2.5 L 9.33 7.5 L 5 10 L 0.67 7.5 L 0.67 2.5"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape rhombus 1`] = `
<body>
  <div>
    <path
      d="M 0 50 L 50 0 L 100 50 L 50 100 Z"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape shurikan 1`] = `
<body>
  <div>
    <path
      d="M 3 1 L 5 0 L 7 1 A 0.5 0.5 0 0 0 9 3.5 L 10 5 L 9 7 A 0.5 0.5 0 0 0 7 9 L 5 10 L 3 9 A 0.5 0.5 0 0 0 1 7 L 0 5 L 1 3 A 0.5 0.5 0 0 0 3 1 M 4 5 A 1 1 0 0 0 6 5 A 1 1 0 0 0 4 5"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape spade 1`] = `
<body>
  <div>
    <path
      d="M 4 9.5 L 6 9.5 L 5.5 8 A 1.7000000000000002 2 0 0 0 8 5 L 5 1.5 L 2 5 A 1.7000000000000002 2 0 0 0 4.5 8"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape square 1`] = `
<body>
  <div>
    <path
      d="M 1 0 A 1 1 0 0 0 0 1 V 9 A 1 1 0 0 0 1 10 H 9 A 1 1 0 0 0 10 9 V 1 A 1 1 0 0 0 9 0 Z"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape star 1`] = `
<body>
  <div>
    <path
      d="M 48.0001 0 L 59.2258 34.549099999999996 H 95.5529 L 66.1637 55.9017 L 77.38940000000001 90.4509 L 48.0001 69.09830000000001 L 18.6108 90.4509 L 29.8365 55.9017 L 0.447266 34.549099999999996 H 36.7744 L 48.0001 0 Z"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render the named shape triangle 1`] = `
<body>
  <div>
    <path
      d="M 50 0 L 100 100 L 0 100 Z"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;
